--- a/index.html
+++ b/index.html
@@ -2341,7 +2341,7 @@
                             "Yubi yubi!" Korone is an adorable, sweet and goofy dogoo that deserves tons of headpats. Alike a dog, she is very attached
                             to another fellow member by the name of Nekomata Okayu often seen gushing over her, never wanting to be apart from her,
                             leading to the hololive community shipping them as "Okakoro". She also has a high pitch laugh that is unique to her, and an
-                            explosive sneeze. She has once stated to be quite into "splatterhouse" type horror and hence has quite an immunity to gore
+                            explosive sneeze. She has once stated to be quite into "splatterhouse" type horror (but not normal horror) and hence has quite an immunity to gore
                             despite her cute appearance and personality, often not batting an eye to gore. Korone is also very fond of retro games
                             oftenly streaming them. Her content is primarily gaming, more specifically but not limited to retro games and the occasional
                              singing stream. She is also part of a group with other hololive members called "OKFAMS"
@@ -2744,7 +2744,7 @@
                     <iframe class="infotopright" src="https://www.youtube.com/embed/B0xrie_yK-Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
-                            Astel is a member holostars 2nd generation also known as "SunTempo" with Kishido Tenma and Yukoku Roberu.
+                            Astel is a member holostars 2nd generation also known as "SunTempo" with Kishido Temma and Yukoku Roberu.
                             He is quite selfish and immatature. However, cares a lot about his friends. He has lost his memories, but sometimes
                             stares into the skies and smirks. His content is primarily gaming like Apex Legends with the occasional singing and chatting streams, and
                             covers.
@@ -2800,7 +2800,7 @@
                     <iframe class="infotopright" src="https://www.youtube.com/embed/59NCxc_iXGE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
-                            "Konkishi!" Tenma is a knight apprentice from the School of Knights and part of holostars 2nd generation
+                            "Konkishi!" Temma is a knight apprentice from the School of Knights and part of holostars 2nd generation
                             also known as "SunTempo" with Astel Leda and Yukoku Roberu, he occasionally can act "insane" and "evil"
                              at times when he plays games like Dead by Daylight and Among Us. Wanting to kill and laughing, showing 
                              no remorse when he does, in turn leading his fans and some holostars members calling him "Dark knight".
@@ -2857,13 +2857,193 @@
                     <iframe class="infotopright" src="https://www.youtube.com/embed/UWdx3DHzB7s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
-                            A barkeep with a fast mouth, Roberu is a person that can continue conversations for lengthy periods, talking
+                            A barkeep with a fast mouth and part of holostars 2nd generation
+                            also known as "SunTempo" with Kishido Temma and Astel Leda. Roberu is a person that can continue conversations for lengthy periods, talking
                             about various topics, suitable trait for a barkeep. He has a natural ability of coming up with on the spot jokes which
                             he is praised for. He speaks with a Kansai dialect, which may be very hard for English speakers. His content is primarily gaming
                             with the occasional chatting stream. He streams quite oftenly in order to cater to people that can only watch YouTube in certain
                             periods of the day. Roberu also has an ongoing meme of "Winning Son", this is from a stream where a viewer asked if he was winning which was a meme
                             back then in the English community, in which he didn't understand so he replied "YEEESSS", resulting in the viewers regarding him as their "son" now.
                             Fun fact, in his youtube URL, there is a section that spells "YOUCANDO1YT", which was generated at random by YouTube.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Kageyama Shien-->
+        <div class="bg-modal-Kshien">
+            <div class="modal-content">
+                <div class="closepop-Kshien">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/Holostars/Shien.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Shien」</strong>"Boss"<br>🟣 / 🍼</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/kageyamashien" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UChSvpZYRPh0FvG4SJGSga3g" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Kshien-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Kshien-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Kshien-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Kshien-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Kshien-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Kshien-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/morimokimori">生川</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/DLbG52hB0XI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            "Yes boss!" Shien is a jackal type beastman that is sometimes air-headed and naive, part of holostars 3rd generation
+                            also known as "MaFia" with Aragami Oga prior to fellow member Tsukishita Kaoru's graduation. Fellow member Aragami Oga has stated that despite
+                            Shien being a mafia boss, he can't do anything without his subordinates and that even with his good animalistic ears,
+                            he can't seem to listen to anybody. He also dislikes insects and celery and only lets people close to him touch his tail.
+                             Shien became a mafia boss through a friend he made
+                            which was the ex-boss that disappeared one day, it is also where he got the name "Kageyama" from. His primary content is gaming
+                            with chat and singing streams on occasion.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Aragami Oga-->
+        <div class="bg-modal-Aoga">
+            <div class="modal-content">
+                <div class="closepop-Aoga">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/Holostars/Oga.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Ouga-san」</strong>"Ouganiki"<br>🐃</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/aragamioga" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UCwL7dgTxKo8Y4RFIKWaf8gA" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Aoga-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Aoga-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Aoga-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Aoga-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Aoga-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Aoga-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/yowaiinudasi">吠L</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/wFcw6MaeUy8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            Oga is an ex-military combatant, fighting for around 5000 years in a war situated in another world. He has retired
+                            from his military days and had decided to tour Japan as he had free time and nothing better to do, eventually he was
+                            scouted to be a member of holostars 3rd generation with Kageyama Shien and Tsukishita Kaoru as "TriNero" in which Kaoru gradutated
+                            and them now known as "MaFia". Ever since coming in contact with retro gaming, he has been hooked since. His content is primarily gaming
+                            with the occasional free chat stream. He has also collaborated with fellow holo member Shirakami Fubuki, as "FOXDEMON" in which they have
+                            excellent chemistry with her acting like the highborne lady and him as the butler, with them constantly teasing each other in which Fubuki
+                            has stated that when Oga receives his 3D form, she would want his horn to be breakable, in which he would normally reply with him doubting that she
+                            would be able to reach his horn, since his height is at a whopping 192 centimeters whilst her's being 160(ears included). Fun fact,
+                             he has a even bigger form of 200 meters!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Tsukishita Kaoru-->
+        <div class="bg-modal-Tkaoru">
+            <div class="modal-content">
+                <div class="closepop-Tkaoru">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/Holostars/Kaoru.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Kaoru-kun」</strong><br>💅</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/tsukishitakaoru" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UCsehvfwaWF6nWuFnXI0AqZQ" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Tkaoru-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Tkaoru-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Tkaoru-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Tkaoru-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Tkaoru-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Tkaoru-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/omu001">むっしゅ</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/NVLLOSovTzE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            "Dokkaaan!" Kaoru likes to showcase himself as "cutesy" and "pure" but has at times made lewd jokes and in some cases
+                            be quite perverted. He is an apprentice make up artist whose hobby is cosmetics to the point of being obsessed over them.
+                            Even though he is a man, he enjoys cute things and his goal is to be beautiful on the inside and out. His well known for his
+                            infamous "Beyblade streams" where he would stream himself playing with beyblades. On the 28th of July 2020 however, he has 
+                             graduated from holostars due to personal cirumstances, all of his archived videos and tweets has been privated since then
+                              with only a few clips remaining on YouTube. He did not have a farewell stream but in his YouTube "about" page, he left a message that reads.
+                              "It's been a really happy and dreamy time for me over the last three months. Thank you all."
                         </p>
                     </div>
                 </div>
