--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <div class="talent_pic_div"><button id="popbutton-moona"><img src="Photos/Profile/ID/Moona.jpg" alt="missing image" style="width:208px;height:208px;border-style: solid;border-color:rgb(255, 255, 255);border-width:7px;"></button>
                 <p class="talentp" style="text-align:center;"><strong>「Moona Hoshinova」</strong></div>
                 
-                <div class="talent_pic_div"><button id="popbutton-airani"><img src="Photos/Profile/ID/Airani.jpg" alt="missing image" style="width:208px;height:208px;border-style: solid;border-color:rgb(255, 255, 255);border-width:7px;"></button>
+                <div class="talent_pic_div"><button id="popbutton-iofi"><img src="Photos/Profile/ID/Airani.jpg" alt="missing image" style="width:208px;height:208px;border-style: solid;border-color:rgb(255, 255, 255);border-width:7px;"></button>
                 <p class="talentp" style="text-align:center;"><strong>「Airani Iofifteen」</strong></p></div>
             </div>
             <!--Generation 2--> 
@@ -1026,7 +1026,9 @@
                             and is also an airhead that's socially awkward and clumsy. However, she always tries her best. She somehow
                             always the butt of jokes which would sometimes result in her throwing small tantrums and
                             very oftenly hyperventilate. She very enjoys playing pranks and causing mischief but more often than not,
-                            her plans backfires and she becomes the victim instead. Despite seemingly being incompetent in most things,
+                            her plans backfires and she becomes the victim instead. She is known to have a friendly rivalry with fellow member
+                            Murasaki Shion in their infamous "Neighbour battles" and has a construction company in Minecraft called
+                            "Akukin Kensetsu". Despite seemingly being incompetent in most things,
                             in gaming however, she is actually quite proficient, being skilled in technical games like Sekiro, Apex legends etc.
                             Despite her faults and clumsiness, she is still our adorable socially awkward gaming maid, and we love her for it.
                             She also has a pet female cat called "Komugi".
@@ -3044,6 +3046,246 @@
                              graduated from holostars due to personal cirumstances, all of his archived videos and tweets has been privated since then
                               with only a few clips remaining on YouTube. He did not have a farewell stream but in his YouTube "about" page, he left a message that reads.
                               "It's been a really happy and dreamy time for me over the last three months. Thank you all."
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Ayunda Risu-->
+        <div class="bg-modal-Arisu">
+            <div class="modal-content">
+                <div class="closepop-Arisu">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/ID/Risu.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Risu」</strong>"Ayunda"<br>🐿</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/ayunda_risu" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UCOyYb1c43VlX9rc_lT6NKQw" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Arisu-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Arisu-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Arisu-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Arisu-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Arisu-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Arisu-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/8103x">Yatomi</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/q0Y-XuaSwqU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            "Brrrrr" Risu is a comedic, friendly, mischievous and extremely hyper squirrel that likes lewd jokes from a magical forest and part of the 1st generation
+                            of hololive Indonesia. Her personality can be 
+                             described as sweet and kind especially when she collabs with other members of hololive and of hololive indonesia. Risu also has a
+                              more mature voice that she can use, where it is regarded as a different person named "Ayunda" as Ayunda sounds more mature and
+                               quite unlike the normal Risu
+                             She became a vTuber in order to repay a woman that saved her when she got lost in the human realm and now lives with her.
+                             She once hosted an event on a channel called "Nonstop-nut November" on the month of November of 2020, where she would post short clips
+                             of herself talking about random facts about nuts, which then followed by "Devour donut December" in December. Her content is primarily gaming
+                             with chat streams and memes time to time. She also host a talk show that happens sometimes called "AREA 15" with generation mates Moona Hoshinova and Airani Iofifteen. However,
+                             it is fully in Indonesian.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Hoshinova Moona-->
+        <div class="bg-modal-Hmoona">
+            <div class="modal-content">
+                <div class="closepop-Hmoona">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/ID/Moona.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Moona」</strong>"MOONA HEY MOONA"<br>🔮</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/moonahoshinova" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UCP0BspO_AMEe3aQqqpo89Dg" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Hmoona-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Hmoona-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Hmoona-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Hmoona-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Hmoona-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Hmoona-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/nyorinyori">Niyori</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/5xTfrvTGhZ4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            "Adamoona!" Moona is a shy girl that speaks in a upbeat tone paired with a pretty unique Indonesian accent, and part of
+                            hololive Indonesia's generation 1. Much like Tsunomaki Watame from the main branch of hololive, she likes to bob her head
+                            and move around her body sporadically, and also faces internet connection issues, very alike her senpai as well, getting
+                            dubbed as "Watame 2.0". She likes to meme on twitter to better connect with her fans as well. She is a fan of Usada Pekora
+                            from the main branch and has interacted with her numerous times, despite the language barrier as she doesn't really understand
+                            Japanese, she has pointed it out in Airani Iofifteen's stream in the past that she had feared to interact with Pekora because of the language
+                            barrier. She is also known to be a very good architect in Minecraft and because of that, she got invited to join Usada Pekora's Minecraft
+                             construction company "Usada Kensetsu".
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Airani Iofifteen-->
+        <div class="bg-modal-Aiofi">
+            <div class="modal-content">
+                <div class="closepop-Aiofi">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/ID/Airani.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Iofi」</strong>"Erofi"<br>🎨</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/airaniiofifteen" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UCAoy6rzhSf4ydcYjJw3WoVg" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Aiofi-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Aiofi-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Aiofi-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Aiofi-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Aiofi-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Aiofi-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/mituk1">Yano Mitsuki</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/o6BYp7nJ_B0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            "Obisa!" Iofi is a cute and friendly alien that is prone to panicking when something doesn't go her way.
+                            She is very knowledgeable about Indonesian cultures and even dialects and is a very good digital artist.
+                            Iofi is a pentalingual, able to understand and speak five languages which are English, Indonesian malay,
+                            Korean, German and Japanese. She is also known to be a little dirty minded even talking about her favourite
+                            R18 artists on stream in the past. Iofi is also part of a group within hololive Indonesia called "AREA 15",
+                             together with fellow members Hoshinova Moona and Ayunda Risu. Her content is primarily gaming with the chatting and
+                             singing streams here and there in which chatting streams are sometimes categorised into English and Indonesian.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Kureiji Ollie-->
+        <div class="bg-modal-Aiofi">
+            <div class="modal-content">
+                <div class="closepop-Aiofi">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/ID/Airani.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Iofi」</strong>"Erofi"<br>🎨</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/airaniiofifteen" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UCAoy6rzhSf4ydcYjJw3WoVg" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Aiofi-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Aiofi-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Aiofi-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Aiofi-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Aiofi-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Aiofi-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/mituk1">Yano Mitsuki</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/o6BYp7nJ_B0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            "Obisa!" Iofi is a cute and friendly alien that is prone to panicking when something doesn't go her way.
+                            She is very knowledgeable about Indonesian cultures and even dialects and is a very good digital artist.
+                            Iofi is a pentalingual, able to understand and speak five languages which are English, Indonesian malay,
+                            Korean, German and Japanese. She is also known to be a little dirty minded even talking about her favourite
+                            R18 artists on stream in the past. Iofi is also part of a group within hololive Indonesia called "AREA 15",
+                             together with fellow members Hoshinova Moona and Ayunda Risu. Her content is primarily gaming with the chatting and
+                             singing streams here and there in which chatting streams are sometimes categorised into English and Indonesian.
                         </p>
                     </div>
                 </div>
